--- a/ultralytics/cfg/models/12/yolo12s.yaml
+++ b/ultralytics/cfg/models/12/yolo12s.yaml
@@ -22,27 +22,28 @@ backbone:
   - [-1, 4, A2C2f, [512, True, 4]] # 6
   - [-1, 1, Conv, [1024, 3, 2]] # 7-P5/32
   - [-1, 4, A2C2f, [1024, True, 1]] # 8
+  - [-1, 1, SPPF, [1024, 5]] # 9 - Spatial Pyramid Pooling Fast untuk multi-scale features
 
 # YOLO12n head
 head:
   - [-1, 1, nn.Upsample, [None, 2, "nearest"]]
   - [[-1, 6], 1, Concat, [1]] # cat backbone P4
-  - [-1, 2, A2C2f, [512, False, -1]] # 9
+  - [-1, 3, A2C2f, [512, False, -1]] # 10 - Increased repeats untuk better feature fusion
 
   - [-1, 1, nn.Upsample, [None, 2, "nearest"]]
   - [[-1, 4], 1, Concat, [1]] # cat backbone P3
-  - [-1, 2, A2C2f, [256, False, -1]] # 12
+  - [-1, 3, A2C2f, [256, False, -1]] # 13 - Increased repeats untuk better feature fusion
 
   - [-1, 1, nn.Upsample, [None, 2, "nearest"]]
   - [[-1, 1], 1, Concat, [1]] # cat backbone P2
-  - [-1, 2, A2C2f, [128, False, -1]] # 15
+  - [-1, 3, A2C2f, [128, False, -1]] # 16 - Increased repeats untuk better feature fusion
 
   - [-1, 1, Conv, [128, 3, 2]]
-  - [[-1, 12], 1, Concat, [1]] # cat head P3
-  - [-1, 2, A2C2f, [256, False, -1]] # 18
+  - [[-1, 13], 1, Concat, [1]] # cat head P3
+  - [-1, 3, A2C2f, [256, False, -1]] # 19 - Increased repeats untuk better feature fusion
 
   - [-1, 1, Conv, [256, 3, 2]]
-  - [[-1, 9], 1, Concat, [1]] # cat head P4
-  - [-1, 2, A2C2f, [512, False, -1]] # 21
+  - [[-1, 10], 1, Concat, [1]] # cat head P4
+  - [-1, 3, A2C2f, [512, False, -1]] # 22 - Increased repeats untuk better feature fusion
 
-  - [[15, 18, 21], 1, Detect, [nc]] # Detect(P2, P3, P4)
+  - [[16, 19, 22], 1, Detect, [nc]] # Detect(P2, P3, P4)
