--- a/ultralytics/cfg/models/12/yolo12s.yaml
+++ b/ultralytics/cfg/models/12/yolo12s.yaml
@@ -8,43 +8,44 @@
 nc: 80 # number of classes
 scales: # model compound scaling constants, i.e. 'model=yolo12n.yaml' will call yolo12.yaml with scale 'n'
   # [depth, width, max_channels]
-  s: [0.50, 0.50, 1024] # summary: 272 layers, 9,284,096 parameters, 9,284,080 gradients, 21.7 GFLOPs
+  s: [0.55, 0.55, 1024] # summary: Increased depth/width for better feature extraction
 
 # YOLO12n backbone
 backbone:
   # [from, repeats, module, args]
   - [-1, 1, Conv, [64, 3, 2]] # 0-P1/2
   - [-1, 1, Conv, [128, 3, 2]] # 1-P2/4
-  - [-1, 2, C3k2, [256, False, 0.25]]
+  - [-1, 3, C3k2, [256, False, 0.25]] # Increased repeats from 2 to 3
   - [-1, 1, Conv, [256, 3, 2]] # 3-P3/8
-  - [-1, 2, C3k2, [512, False, 0.25]]
+  - [-1, 3, C3k2, [512, False, 0.25]] # Increased repeats from 2 to 3
   - [-1, 1, Conv, [512, 3, 2]] # 5-P4/16
-  - [-1, 4, A2C2f, [512, True, 4]] # 6
+  - [-1, 5, A2C2f, [512, True, 4]] # 6 - Increased repeats from 4 to 5
   - [-1, 1, Conv, [1024, 3, 2]] # 7-P5/32
-  - [-1, 4, A2C2f, [1024, True, 1]] # 8
+  - [-1, 5, A2C2f, [1024, True, 1]] # 8 - Increased repeats from 4 to 5
   - [-1, 1, SPPF, [1024, 5]] # 9 - Spatial Pyramid Pooling Fast untuk multi-scale features
 
 # YOLO12n head
 head:
   - [-1, 1, nn.Upsample, [None, 2, "nearest"]]
   - [[-1, 6], 1, Concat, [1]] # cat backbone P4
-  - [-1, 3, A2C2f, [512, False, -1]] # 10 - Increased repeats untuk better feature fusion
+  - [-1, 4, A2C2f, [512, False, -1]] # 10 - Increased repeats from 3 to 4 untuk better feature fusion
+  - [-1, 1, SPPF, [512, 5]] # 11 - Added SPPF for multi-scale features in head
 
   - [-1, 1, nn.Upsample, [None, 2, "nearest"]]
   - [[-1, 4], 1, Concat, [1]] # cat backbone P3
-  - [-1, 3, A2C2f, [256, False, -1]] # 13 - Increased repeats untuk better feature fusion
+  - [-1, 4, A2C2f, [256, False, -1]] # 14 - Increased repeats from 3 to 4 untuk better feature fusion
 
   - [-1, 1, nn.Upsample, [None, 2, "nearest"]]
   - [[-1, 1], 1, Concat, [1]] # cat backbone P2
-  - [-1, 3, A2C2f, [128, False, -1]] # 16 - Increased repeats untuk better feature fusion
+  - [-1, 4, A2C2f, [128, False, -1]] # 17 - Increased repeats from 3 to 4 untuk better feature fusion
 
   - [-1, 1, Conv, [128, 3, 2]]
-  - [[-1, 13], 1, Concat, [1]] # cat head P3
-  - [-1, 3, A2C2f, [256, False, -1]] # 19 - Increased repeats untuk better feature fusion
+  - [[-1, 16], 1, Concat, [1]] # cat head P3 (updated after SPPF addition)
+  - [-1, 4, A2C2f, [256, False, -1]] # 20 - Increased repeats from 3 to 4 untuk better feature fusion
 
   - [-1, 1, Conv, [256, 3, 2]]
-  - [[-1, 10], 1, Concat, [1]] # cat head P4
-  - [-1, 3, A2C2f, [512, False, -1]] # 22 - Increased repeats untuk better feature fusion
+  - [[-1, 13], 1, Concat, [1]] # cat head P4 (after SPPF for better features)
+  - [-1, 4, A2C2f, [512, False, -1]] # 23 - Increased repeats from 3 to 4 untuk better feature fusion
 
-  - [[16, 19, 22], 1, Detect, [nc]] # Detect(P2, P3, P4)
-  #87.9
+  - [[19, 22, 25], 1, Detect, [nc]] # Detect(P2, P3, P4) - updated layer indices
+  # Improved architecture for higher mAP
