--- a/ultralytics/cfg/models/12/yolo12s.yaml
+++ b/ultralytics/cfg/models/12/yolo12s.yaml
@@ -8,7 +8,7 @@
 nc: 80 # number of classes
 scales: # model compound scaling constants, i.e. 'model=yolo12n.yaml' will call yolo12.yaml with scale 'n'
   # [depth, width, max_channels]
-  s: [0.55, 0.55, 1024] # summary: Increased depth/width for better feature extraction
+  s: [0.50, 0.50, 1024] # summary: Using 0.50 to ensure channels are multiples of 64 (for ABlock compatibility)
 
 # YOLO12n backbone
 backbone:
@@ -28,24 +28,24 @@ backbone:
 head:
   - [-1, 1, nn.Upsample, [None, 2, "nearest"]]
   - [[-1, 6], 1, Concat, [1]] # cat backbone P4
-  - [-1, 4, A2C2f, [512, False, -1]] # 10 - Increased repeats from 3 to 4 untuk better feature fusion
+  - [-1, 4, A2C2f, [512, False, 1, False, 2.0, 0.5]] # 10 - c2=512, e=0.5 -> c_=256 (multiple of 32) ✓
   - [-1, 1, SPPF, [512, 5]] # 11 - Added SPPF for multi-scale features in head
 
   - [-1, 1, nn.Upsample, [None, 2, "nearest"]]
   - [[-1, 4], 1, Concat, [1]] # cat backbone P3
-  - [-1, 4, A2C2f, [256, False, -1]] # 14 - Increased repeats from 3 to 4 untuk better feature fusion
+  - [-1, 4, A2C2f, [256, False, 1, False, 2.0, 0.5]] # 14 - c2=256, e=0.5 -> c_=128 (multiple of 32) ✓
 
   - [-1, 1, nn.Upsample, [None, 2, "nearest"]]
   - [[-1, 1], 1, Concat, [1]] # cat backbone P2
-  - [-1, 4, A2C2f, [128, False, -1]] # 17 - Increased repeats from 3 to 4 untuk better feature fusion
+  - [-1, 4, A2C2f, [128, False, 1, False, 2.0, 0.5]] # 17 - c2=128, e=0.5 -> c_=64 (multiple of 32) ✓
 
   - [-1, 1, Conv, [128, 3, 2]]
   - [[-1, 16], 1, Concat, [1]] # cat head P3 (updated after SPPF addition)
-  - [-1, 4, A2C2f, [256, False, -1]] # 20 - Increased repeats from 3 to 4 untuk better feature fusion
+  - [-1, 4, A2C2f, [256, False, 1, False, 2.0, 0.5]] # 20 - c2=256, e=0.5 -> c_=128 (multiple of 32) ✓
 
   - [-1, 1, Conv, [256, 3, 2]]
   - [[-1, 13], 1, Concat, [1]] # cat head P4 (after SPPF for better features)
-  - [-1, 4, A2C2f, [512, False, -1]] # 23 - Increased repeats from 3 to 4 untuk better feature fusion
+  - [-1, 4, A2C2f, [512, False, 1, False, 2.0, 0.5]] # 23 - c2=512, e=0.5 -> c_=256 (multiple of 32) ✓
 
   - [[19, 22, 25], 1, Detect, [nc]] # Detect(P2, P3, P4) - updated layer indices
   # Improved architecture for higher mAP
