--- a/ultralytics/cfg/models/12/yolo12s.yaml
+++ b/ultralytics/cfg/models/12/yolo12s.yaml
@@ -1,51 +1,51 @@
 # Ultralytics 🚀 AGPL-3.0 License - https://ultralytics.com/license
 
-# YOLO12 object detection model with P2/4 - P4/16 outputs - EXTREME OPTIMIZATION
+# YOLO12 object detection model with P2/4 - P5/32 outputs
 # Model docs: https://docs.ultralytics.com/models/yolo12
 # Task docs: https://docs.ultralytics.com/tasks/detect
 
 # Parameters
-nc: 80 # number of classes
+nc: 1 # number of classes
 scales: # model compound scaling constants, i.e. 'model=yolo12n.yaml' will call yolo12.yaml with scale 'n'
-  # [depth, width, max_channels]
-  s: [0.50, 0.50, 1024] # Optimized for extreme performance
+  s: [0.50, 0.50, 1024] # summary: 272 layers, 9,284,096 parameters, 9,284,080 gradients, 21.7 GFLOPs
 
-# YOLO12s backbone - EXTREME OPTIMIZATION
+# YOLO12n backbone
 backbone:
   # [from, repeats, module, args]
   - [-1, 1, Conv, [64, 3, 2]] # 0-P1/2
   - [-1, 1, Conv, [128, 3, 2]] # 1-P2/4
-  - [-1, 4, C3k2, [256, False, 0.25]] # Optimized: Increased repeats for better feature extraction
-  - [-1, 1, ADown, [256]] # 3-P3/8 - Using ADown for efficient downsampling
-  - [-1, 4, C3k2, [512, False, 0.25]] # Optimized: Increased repeats
-  - [-1, 1, ADown, [512]] # 5-P4/16 - Using ADown for efficient downsampling
-  - [-1, 6, A2C2f, [512, True, 4]] # 6 - Optimized: Increased repeats for better attention
-  - [-1, 1, ADown, [1024]] # 7-P5/32 - Using ADown for efficient downsampling
-  - [-1, 6, A2C2f, [1024, True, 1]] # 8 - Optimized: Increased repeats
-  - [-1, 1, SPPF, [1024, 5]] # 9 - Added SPPF for multi-scale feature extraction
+  - [-1, 2, C3k2, [256, False, 0.25]]
+  - [-1, 1, Conv, [256, 3, 2]] # 3-P3/8
+  - [-1, 2, C3k2, [512, False, 0.25]]
+  - [-1, 1, Conv, [512, 3, 2]] # 5-P4/16
+  - [-1, 4, A2C2f, [512, True, 4, True]] # residual=True
+  - [-1, 1, Conv, [1024, 3, 2]] # 7-P5/32
+  - [-1, 4, A2C2f, [1024, True, 1, True]] # 8 residual=True
 
-# YOLO12s head - EXTREME OPTIMIZATION
+# YOLO12n head
 head:
   - [-1, 1, nn.Upsample, [None, 2, "nearest"]]
   - [[-1, 6], 1, Concat, [1]] # cat backbone P4
-  - [-1, 5, A2C2f, [512, False, -1]] # 12 - Optimized: Increased repeats
+  - [-1, 2, A2C2f, [512, True, 1, True]] # 11 residual=True
 
   - [-1, 1, nn.Upsample, [None, 2, "nearest"]]
   - [[-1, 4], 1, Concat, [1]] # cat backbone P3
-  - [-1, 5, A2C2f, [256, False, -1]] # 15 - Optimized: Increased repeats
+  - [-1, 2, A2C2f, [256, True, 1, True]] # 14 residual=True
 
   - [-1, 1, nn.Upsample, [None, 2, "nearest"]]
   - [[-1, 1], 1, Concat, [1]] # cat backbone P2
-  - [-1, 5, A2C2f, [128, False, -1]] # 18 - Optimized: Increased repeats
+  - [-1, 2, A2C2f, [128, True, 1, True]] # 15 (P2/4) residual=True
 
   - [-1, 1, Conv, [128, 3, 2]]
-  - [[-1, 15], 1, Concat, [1]] # cat head P3
-  - [-1, 5, A2C2f, [256, False, -1]] # 21 - Optimized: Increased repeats
+  - [[-1, 14], 1, Concat, [1]] # cat head P3
+  - [-1, 2, A2C2f, [256, True, 1, True]] # 18 residual=True
 
   - [-1, 1, Conv, [256, 3, 2]]
-  - [[-1, 12], 1, Concat, [1]] # cat head P4
-  - [-1, 3, C3k2, [512, True]] # 24 - Optimized: Using C3k2 for final bottom-up layer
+  - [[-1, 11], 1, Concat, [1]] # cat head P4
+  - [-1, 2, A2C2f, [512, True, 1, True]] # 21 residual=True
 
-  - [[18, 21, 24], 1, Detect, [nc]] # Detect(P2, P3, P4)
-  # Extreme optimization: Enhanced backbone with ADown, SPPF, optimized A2C2f with residual connections
-  # Improved feature extraction and multi-scale processing for maximum performance
+  - [-1, 1, Conv, [512, 3, 2]]
+  - [[-1, 8], 1, Concat, [1]] # cat head P5
+  - [-1, 2, A2C2f, [1024, True, 1, True]] # 24 (P5/32-large) residual=True
+
+  - [[15, 18, 21, 24], 1, Detect, [nc]] # Detect(P2, P3, P4, P5)
