--- a/ultralytics/cfg/models/12/yolo12s.yaml
+++ b/ultralytics/cfg/models/12/yolo12s.yaml
@@ -7,6 +7,7 @@
 # Parameters
 nc: 1 # number of classes
 scales: # model compound scaling constants, i.e. 'model=yolo12n.yaml' will call yolo12.yaml with scale 'n'
+  # [depth, width, max_channels]
   s: [0.50, 0.50, 1024] # summary: 272 layers, 9,284,096 parameters, 9,284,080 gradients, 21.7 GFLOPs
 
 # YOLO12n backbone
@@ -14,38 +15,38 @@ backbone:
   # [from, repeats, module, args]
   - [-1, 1, Conv, [64, 3, 2]] # 0-P1/2
   - [-1, 1, Conv, [128, 3, 2]] # 1-P2/4
-  - [-1, 4, A2C2f, [1024, True, 1, True]] # 8 residual=True
+  - [-1, 2, C3k2, [256, True, 0.25]]
   - [-1, 1, Conv, [256, 3, 2]] # 3-P3/8
-  - [-1, 2, C3k2, [512, False, 0.25]]
+  - [-1, 2, C3k2, [512, True, 0.25]]
   - [-1, 1, Conv, [512, 3, 2]] # 5-P4/16
-  - [-1, 4, A2C2f, [512, True, 4, True]] # residual=True
+  - [-1, 4, A2C2f, [512, True, 4]]
   - [-1, 1, Conv, [1024, 3, 2]] # 7-P5/32
-  - [-1, 4, A2C2f, [1024, True, 1, True]] # 8 residual=True
+  - [-1, 4, A2C2f, [1024, True, 1]] # 8
 
 # YOLO12n head
 head:
   - [-1, 1, nn.Upsample, [None, 2, "nearest"]]
   - [[-1, 6], 1, Concat, [1]] # cat backbone P4
-  - [-1, 2, A2C2f, [512, False, 1, False]] # 11 no residual (after concat, c1 != c2)
+  - [-1, 2, A2C2f, [512, False, -1]] # 11
 
   - [-1, 1, nn.Upsample, [None, 2, "nearest"]]
   - [[-1, 4], 1, Concat, [1]] # cat backbone P3
-  - [-1, 2, A2C2f, [256, False, 1, False]] # 14 no residual (after concat, c1 != c2)
+  - [-1, 2, A2C2f, [256, False, -1]] # 14
 
   - [-1, 1, nn.Upsample, [None, 2, "nearest"]]
   - [[-1, 1], 1, Concat, [1]] # cat backbone P2
-  - [-1, 2, A2C2f, [128, False, 1, False]] # 15 (P2/4) no residual (after concat, c1 != c2)
+  - [-1, 2, A2C2f, [128, False, -1]] # 15 (P2/4)
 
   - [-1, 1, Conv, [128, 3, 2]]
   - [[-1, 14], 1, Concat, [1]] # cat head P3
-  - [-1, 2, A2C2f, [256, False, 1, False]] # 18 no residual (after concat, c1 != c2)
+  - [-1, 2, A2C2f, [256, False, -1]] # 18
 
   - [-1, 1, Conv, [256, 3, 2]]
   - [[-1, 11], 1, Concat, [1]] # cat head P4
-  - [-1, 2, A2C2f, [512, False, 1, False]] # 21 no residual (after concat, c1 != c2)
+  - [-1, 2, A2C2f, [512, False, -1]] # 21
 
   - [-1, 1, Conv, [512, 3, 2]]
   - [[-1, 8], 1, Concat, [1]] # cat head P5
-  - [-1, 2, A2C2f, [1024, False, 1, False]] # 24 (P5/32-large) no residual (after concat, c1 != c2)
+  - [-1, 2, C3k2, [1024, True]] # 24 (P5/32-large)
 
   - [[15, 18, 21, 24], 1, Detect, [nc]] # Detect(P2, P3, P4, P5)
