--- a/ultralytics/cfg/models/12/yolo12s.yaml
+++ b/ultralytics/cfg/models/12/yolo12s.yaml
@@ -8,45 +8,45 @@
 nc: 1 # number of classes
 scales: # model compound scaling constants, i.e. 'model=yolo12n.yaml' will call yolo12.yaml with scale 'n'
   # [depth, width, max_channels]
-  s: [0.50, 0.50, 1024] # summary: 272 layers, 9,284,096 parameters, 9,284,080 gradients, 21.7 GFLOPs
+  s: [0.67, 0.67, 1024] # summary: increased capacity for better performance while maintaining memory efficiency
 
 # YOLO12n backbone
 backbone:
   # [from, repeats, module, args]
   - [-1, 1, Conv, [64, 3, 2]] # 0-P1/2
   - [-1, 1, Conv, [128, 3, 2]] # 1-P2/4
-  - [-1, 2, C3k2, [256, True, 0.25]]
+  - [-1, 3, C3k2, [256, True, 0.25]] # increased from 2 to 3
   - [-1, 1, Conv, [256, 3, 2]] # 3-P3/8
-  - [-1, 2, C3k2, [512, True, 0.25]]
+  - [-1, 3, C3k2, [512, True, 0.25]] # increased from 2 to 3
   - [-1, 1, Conv, [512, 3, 2]] # 5-P4/16
-  - [-1, 4, A2C2f, [512, True, 4]]
+  - [-1, 6, A2C2f, [512, True, 4]] # increased from 4 to 6 for better feature extraction
   - [-1, 1, Conv, [1024, 3, 2]] # 7-P5/32
-  - [-1, 4, A2C2f, [1024, True, 1]] # 8
+  - [-1, 6, A2C2f, [1024, True, 1]] # increased from 4 to 6
 
 # YOLO12n head
 head:
   - [-1, 1, nn.Upsample, [None, 2, "nearest"]]
   - [[-1, 6], 1, Concat, [1]] # cat backbone P4
-  - [-1, 2, A2C2f, [512, False, -1]] # 11
+  - [-1, 3, A2C2f, [512, False, -1]] # increased from 2 to 3
 
   - [-1, 1, nn.Upsample, [None, 2, "nearest"]]
   - [[-1, 4], 1, Concat, [1]] # cat backbone P3
-  - [-1, 2, A2C2f, [256, False, -1]] # 14
+  - [-1, 3, A2C2f, [256, False, -1]] # increased from 2 to 3
 
   - [-1, 1, nn.Upsample, [None, 2, "nearest"]]
   - [[-1, 1], 1, Concat, [1]] # cat backbone P2
-  - [-1, 2, A2C2f, [128, False, -1]] # 15 (P2/4)
+  - [-1, 3, A2C2f, [128, False, -1]] # increased from 2 to 3 (P2/4)
 
   - [-1, 1, Conv, [128, 3, 2]]
   - [[-1, 14], 1, Concat, [1]] # cat head P3
-  - [-1, 2, A2C2f, [256, False, -1]] # 18
+  - [-1, 3, A2C2f, [256, False, -1]] # increased from 2 to 3
 
   - [-1, 1, Conv, [256, 3, 2]]
   - [[-1, 11], 1, Concat, [1]] # cat head P4
-  - [-1, 2, A2C2f, [512, False, -1]] # 21
+  - [-1, 3, A2C2f, [512, False, -1]] # increased from 2 to 3
 
   - [-1, 1, Conv, [512, 3, 2]]
   - [[-1, 8], 1, Concat, [1]] # cat head P5
-  - [-1, 2, C3k2, [1024, True]] # 24 (P5/32-large)
+  - [-1, 3, C3k2, [1024, True]] # increased from 2 to 3 (P5/32-large)
 
-  - [[15, 18, 21, 24], 1, Detect, [nc]] # Detect(P2, P3, P4, P5)
+  - [[17, 20, 23, 26], 1, Detect, [nc]] # Detect(P2, P3, P4, P5) - updated indices after increasing repeats
