--- a/ultralytics/cfg/models/12/yolo12s.yaml
+++ b/ultralytics/cfg/models/12/yolo12s.yaml
@@ -8,7 +8,7 @@
 nc: 1 # number of classes
 scales: # model compound scaling constants, i.e. 'model=yolo12n.yaml' will call yolo12.yaml with scale 'n'
   # [depth, width, max_channels]
-  s: [0.67, 0.67, 1024] # summary: increased capacity for better performance while maintaining memory efficiency
+  s: [0.50, 0.50, 1024] # summary: original scale ensures channels divisible by 64 for A2C2f compatibility
 
 # YOLO12n backbone
 backbone:
