--- a/ultralytics/cfg/models/12/yolo12s.yaml
+++ b/ultralytics/cfg/models/12/yolo12s.yaml
@@ -1,6 +1,6 @@
 # Ultralytics 🚀 AGPL-3.0 License - https://ultralytics.com/license
 
-# YOLO12 object detection model with P3/8 - P5/32 outputs
+# YOLO12 object detection model with P2/4 - P4/16 outputs
 # Model docs: https://docs.ultralytics.com/models/yolo12
 # Task docs: https://docs.ultralytics.com/tasks/detect
 
@@ -37,12 +37,16 @@ head:
   - [[-1, 4], 1, Concat, [1]] # cat backbone P3
   - [-1, 2, A2C2f, [256, False, -1]] # 14
 
+  - [-1, 1, nn.Upsample, [None, 2, "nearest"]]
+  - [[-1, 1], 1, Concat, [1]] # cat backbone P2
+  - [-1, 2, A2C2f, [128, False, -1]] # 17
+
+  - [-1, 1, Conv, [128, 3, 2]]
+  - [[-1, 14], 1, Concat, [1]] # cat head P3
+  - [-1, 2, A2C2f, [256, False, -1]] # 20
+
   - [-1, 1, Conv, [256, 3, 2]]
   - [[-1, 11], 1, Concat, [1]] # cat head P4
-  - [-1, 2, A2C2f, [512, False, -1]] # 17
+  - [-1, 2, A2C2f, [512, False, -1]] # 23
 
-  - [-1, 1, Conv, [512, 3, 2]]
-  - [[-1, 8], 1, Concat, [1]] # cat head P5
-  - [-1, 2, C3k2, [1024, True]] # 20 (P5/32-large)
-
-  - [[14, 17, 20], 1, Detect, [nc]] # Detect(P3, P4, P5)
+  - [[17, 20, 23], 1, Detect, [nc]] # Detect(P2, P3, P4)
