--- a/ultralytics/cfg/models/12/yolo12s.yaml
+++ b/ultralytics/cfg/models/12/yolo12s.yaml
@@ -47,3 +47,6 @@ head:
   - [-1, 2, C3k2, [1024, True]] # 20 (P5/32-large)
 
   - [[14, 17, 20], 1, Detect, [nc]] # Detect(P3, P4, P5)
+
+
+  #tag:  0.867
